changed spacing of bullet points so that they no longer extend past the header

--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -10,8 +10,9 @@ body {
 }
 
 li {
-	max-width: 30rem; 
+	max-width: 30rem;
 	text-indent: -1.35rem;
+  padding-left: 1.35rem;
 }
 
 /*
