--- a/src/app/extracurriculars/extracurriculars.component.scss
+++ b/src/app/extracurriculars/extracurriculars.component.scss
@@ -3,12 +3,13 @@ body {
 }
 
 .leftside {
-	background-color: #F5F5F5;
-	padding-left: 2rem;
-	padding-right: 2rem;
+  background-color: #F5F5F5;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 li {
-	max-width: 30rem;
-	text-indent: -1.35rem;
+  max-width: 30rem;
+  text-indent: -1.35rem;
+  padding-left: 1.35rem;
 }
