--- a/src/app/work-experience/work-experience.component.scss
+++ b/src/app/work-experience/work-experience.component.scss
@@ -9,6 +9,7 @@ body {
 }
 
 li {
-	max-width: 30rem; 
+	max-width: 30rem;
 	text-indent: -1.35rem;
+  padding-left: 1.35rem;
 }
